# Narradia

./: .CMakeLists.txt.kate-swp  .clang-format  .gitignore  Build.bat  Build.sh  BuildDebug.sh  CMakeLists.txt  Clean.sh  InstallDependencies.sh  README.md  Run.bat  RunServerAndClient.sh  StopServer.sh
Source/: Main.cpp
Source/Common/: Singleton.hpp  Typedefs.hpp
Source/Core/: ActorsData.cpp  ActorsData.hpp  Assets.cpp  Assets.hpp  Core.cpp  Core.hpp  GuiCore.cpp  GuiCore.hpp  ModelCreation.cpp  ModelCreation.hpp  Rendering.cpp  Rendering.hpp
Source/Engine/: ActorsData.hpp  Assets.hpp  GuiCore.cpp  GuiCore.hpp  ModelCreation.cpp  ModelCreation.hpp  Rendering.cpp  Rendering.hpp  SdlDeleter.cpp  SdlDeleter.hpp
Source/Engine/Assets/: AudioBank.cpp  AudioBank.hpp  FileUtilities.cpp  FileUtilities.hpp  ImageBank.cpp  ImageBank.hpp  ImageEntry.hpp  ModelBank.cpp  ModelBank.hpp
Source/Engine/Assets/ModelCreation/: ModelCreator.cpp  ModelCreator.hpp  ModelPartCreator.cpp  ModelPartCreator.hpp  ModelPartKeyframeCreator.cpp  ModelPartKeyframeCreator.hpp
Source/Engine/Core/: Audio.cpp  Audio.hpp  Core.cpp  Core.hpp  Cursor.cpp  Cursor.hpp  CursorTypes.hpp  EventPoller.cpp  EventPoller.hpp  GameEngine.cpp  GameEngine.hpp  GameLoop.cpp  GameLoop.hpp  Logger.cpp  Logger.hpp  RotationDirections.hpp  SceneBase.cpp  SceneBase.hpp  SceneManager.cpp  SceneManager.hpp  SceneNames.hpp  TextLine.hpp  TextOutBox.cpp  TextOutBox.hpp  Utilities.cpp  Utilities.hpp
Source/Engine/Core/Graphics/: Graphics.cpp  Graphics.hpp  GraphicsGl.cpp  GraphicsGl.hpp
Source/Engine/Core/Input/: KeyboardInput.cpp  KeyboardInput.hpp  MouseAction.hpp  MouseActionManager.cpp  MouseActionManager.hpp  MouseButton.cpp  MouseButton.hpp  MouseInput.cpp  MouseInput.hpp
Source/Engine/Core/ModelStructure/: Model.cpp  Model.hpp  ModelPart.cpp  (+3 more)
Source/Engine/GuiCore/: GuiButton.cpp  GuiButton.hpp  GuiComponent.hpp  GuiContainer.cpp  GuiContainer.hpp  GuiMovableContainer.cpp  GuiMovableContainer.hpp  GuiTextBox.cpp  GuiTextBox.hpp  GuiWindow.cpp  GuiWindow.hpp  GuiWindowCloseButton.cpp  GuiWindowCloseButton.hpp  GuiWindowObjectSlot.cpp  GuiWindowObjectSlot.hpp  SceneGui.cpp  SceneGui.hpp
Source/Math/: ExperienceCalculations.cpp  ExperienceCalculations.hpp  Trigonometry.cpp  Trigonometry.hpp
Source/Matter/: Color.cpp  Color.hpp  Colors.cpp  Colors.hpp  GlRectangleF.cpp  GlRectangleF.hpp  Point2.cpp  Point2.hpp  Point2F.cpp  Point2F.hpp  Point3.cpp  Point3.hpp  Point3F.cpp  Point3F.hpp  RectangleF.cpp  RectangleF.hpp  Size.cpp  Size.hpp  SizeF.cpp  SizeF.hpp  Vertex2F.cpp  Vertex2F.hpp  Vertex3F.cpp  Vertex3F.hpp  VertexTile.cpp  VertexTile.hpp
Source/Matter/Geometry/: GlRectangleF.hpp  Point2.cpp  Point2.hpp  Point2F.cpp  Point2F.hpp  Point3.hpp  Point3F.cpp  Point3F.hpp  RectangleF.cpp  RectangleF.hpp  Size.hpp  SizeF.cpp  SizeF.hpp  Vertex2F.hpp  Vertex3F.hpp  VertexTile.cpp  VertexTile.hpp
Source/Scenes/: BasicScenes.cpp  BasicScenes.hpp
Source/Scenes/EditorScene/: EditorScene.cpp  EditorScene.hpp  EditorSceneGui.cpp  EditorSceneGui.hpp
Source/Scenes/GameLoadScene/: GameLoadScene.cpp  GameLoadScene.hpp
Source/Scenes/GameSaveScene/: GameSaveScene.cpp  GameSaveScene.hpp
Source/Scenes/IntroScene/: IntroScene.cpp  IntroScene.hpp
Source/Scenes/MainMenuScene/: MainMenuScene.cpp  MainMenuScene.hpp
Source/Scenes/MapGenerationScene/: MapGenerateScene.cpp  MapGenerateScene.hpp  MapGenerationScene.cpp  MapGenerationScene.hpp  MapGenerator.cpp  MapGenerator.hpp
Source/Scenes/MapLoadScene/: MapLoadScene.cpp  MapLoadScene.hpp
Source/Scenes/MapSaveScene/: MapSaveScene.cpp  MapSaveScene.hpp
Source/Scenes/MapTypeSelectionScene/: MapTypeSelectionScene.cpp  MapTypeSelectionScene.hpp
Source/Scenes/PlayScene/: ObjectHandling.cpp  ObjectHandling.hpp  PlayScene.cpp  PlayScene.hpp  PlaySceneGui.cpp  PlaySceneGui.hpp
Source/Scenes/Shared/: GameSaveFile.cpp  GuiObjectHovering.cpp  GuiObjectHovering.hpp  KeyboardMove.cpp  KeyboardMove.hpp  MapFilesIO.cpp  MapFilesIO.hpp  MouseRotation.cpp  MouseRotation.hpp  TileHovering.cpp  TileHovering.hpp
Source/Scenes/SharedSceneModules/: GameSaveFile.cpp  GameSaveFile.hpp  GameSaver.cpp  GameSaver.hpp  GuiObjectHovering.cpp  GuiObjectHovering.hpp  KeyboardMove.cpp  KeyboardMove.hpp  MapFilesIO.cpp  MapFilesIO.hpp  MouseRotation.cpp  MouseRotation.hpp  TileHovering.cpp  TileHovering.hpp
Source/Scenes/UserMapSelectionScene/: UserMapSelectionScene.cpp  UserMapSelectionScene.hpp
Source/Universe/: Companion.cpp  Companion.hpp  MapArea.hpp  Object.hpp  ObjectBehaviourEntry.hpp  ObjectsCollection.hpp  Tile.cpp
Source/World/: ActorsData.cpp  Companion.cpp  Companion.hpp  MapArea.cpp  MapArea.hpp  Mob.cpp  Mob.hpp  Object.cpp  Object.hpp  ObjectBehaviourEntry.hpp  ObjectBehaviourFlags.hpp  ObjectBehaviourList.cpp  ObjectBehaviourList.hpp  ObjectsCollection.cpp  ObjectsCollection.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
Source/World/Actors/: ActorsData.cpp  ActorsData.hpp  Companion.cpp  Companion.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp  PlayerBuilds.hpp
(+178 files in other folders)
